<resources>
    <string name="app_name">BoothListManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">부스 관리 매니저</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name='page_title'>타이틀</string>

    <string name="menu_home">홈</string>
    <string name='home_ServiceConnectionLabel'>서비스 상태</string>
    <string name="home_SheetTitleLabel">시트 제목</string>


    <string name="menu_Add_Booth">부스 추가</string>
    <string name="menu_search">검색</string>
    <string name="menu_hyperlinkgenerator">링크 생성기</string>
    <string name="menu_settings">설정</string>

    <string name="basic_boothname">부스 이름</string>
    <string name="label_boothnumber">부스 번호</string>

    <string name="label_genre">장르</string>
    <string name="label_Yoil">참가 요일</string>
    <string name="Radio_Saturday">토요일</string>
    <string name="Radio_Sunday">일요일</string>
    <string name="Radio_Both">토/일</string>

    <string name="label_InfoLabel">인포 라벨</string>
    <string name="label_InfoLink">인포 링크</string>

    <string name="label_PreOrderDate">선입금 마감 일자</string>
    <string name="label_PreOrderLabel">선입금 링크 라벨</string>
    <string name="label_PreOrderLink">선입금 링크</string>

    <string name="button_emptyText">텍스트 칸 비우기</string>

    <string name="helper_multiLine">//를 넣으면 다음 줄로 이동합니다.</string>
    <string name="preference_sheetId_Summary">부스를 등록하기 위한 시트의 ID를 설정합니다.</string>

    <string name="label_linkshhetnumber">연결하려는 시트의 넘버</string>
    <string name="explanation_linksheetNumber">연결하려는 시트의 넘버로 0부터 시작합니다.</string>

    <string name="label_linkboothCell">연결하려는 셀의 a1Notation</string>
    <string name="explanation_linkboothCell">연결하려는 셀의 a1 값입니다. 알파벨 + 숫자의 조합입니다.</string>

    <string name="label_linkLabel">링크 라벨</string>
    <string name="explanation_linkLabel">연결하려는 링크에 표기될 라벨입니다.</string>

    <string name="label_link">링크</string>
    <string name="explanation_link">연결하려는 링크</string>

    <string name="button_CopyToClipboard">클립보드로 복사</string>

    <string name="open_Drawer">Opened Drawer</string>
    <string name="close_Drawer">Closed Drawer</string>
</resources>