<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:enabled="true"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:enabled="true"
            android:title="@string/menu_Add_Booth" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:enabled="true"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_preference"
            android:icon="@drawable/ic_settings_24dp"
            android:enabled="true"
            android:title="@string/menu_settings"/>
</menu>