<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.minepacu.boothlistmanager.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.minepacu.boothlistmanager.ui.Booth.AddBoothFragment"
        android:label="@string/menu_Add_Booth"
        tools:layout="@layout/fragment_addbooth" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.minepacu.boothlistmanager.ui.Search.SearchBoothFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_searchbooth" />

    <fragment
        android:id="@+id/nav_hyperlinkgenerator"
        android:name="com.minepacu.boothlistmanager.ui.HyperLinkGenerator.HyperLinkGeneratorFragment"
        android:label="@string/menu_hyperlinkgenerator"
        tools:layout="@layout/fragment_hyperlinkgenerator" />

    <fragment
        android:id="@+id/nav_preference"
        android:name="com.minepacu.boothlistmanager.ui.Settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_preference" />
</navigation>